# 3dEZ

./: .env.production.example  .gitignore  CLAUDE.md  Caddyfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  secrets.production.env.enc
.github/workflows/: ci.yml  deploy.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json  qa-uat-issues.md
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: auth.py  conversations.py  deps.py  designs.py  generate.py  health.py  photos.py  shared.py  stl_files.py  usage.py
backend/src/app/core/: claude_client.py  config.py  rate_limit.py
backend/src/app/db/: engine.py  models.py
backend/src/app/modeler/: __init__.py  csg_evaluator.py  engine.py  export.py  mesh_ops.py  validation.py
backend/src/app/modeler/templates/: __init__.py  base.py  csg_primitive.py  enclosure.py  mounting_bracket.py  organizer.py
backend/src/app/models/: api.py  designs.py  tools.py
backend/src/app/prompts/: design_wizard.py
backend/src/app/services/: auth.py  conversation.py  cost_estimation.py
backend/tests/: conftest.py  test_api_conversations.py  test_api_designs.py  test_api_generate.py  test_api_health.py  test_api_photos.py  test_config.py  test_db_models.py  test_modeler.py  test_models.py  test_prompts.py  test_service_conversation.py  test_tool_schema.py  test_tools.py  test_validation.py
frontend/: Dockerfile  package-lock.json  package.json
scripts/: provision-server.sh
shared/: api-types.ts  design-params.ts
(+110 files in other folders)
