[project]
name = "3dez-backend"
version = "0.1.0"
description = "3dEZ backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic>=2",
    "pydantic-settings>=2",
    "anthropic",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
